--- a/LP-3/ML/1-UberPricePrediction/UberPrice.ipynb
+++ b/LP-3/ML/1-UberPricePrediction/UberPrice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "(200000, 9)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4         -73.973082         40.761247                5  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[200000 rows x 9 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "4         -73.973082         40.761247                5  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "max          872.697628       208.000000  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
        "4  2014          3  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        "4         40.761247                5    17   28      8  2014          3  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "4        4.475450  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,18 +1293,18 @@
     "    lower_whisker = Q1-1.5*IQR\n",
     "    upper_whisker = Q3+1.5*IQR\n",
     "    \n",
-    "    df[col] = np.clip(df1[col] , lower_whisker , upper_whisker)\n",
+    "    df1[col] = np.clip(df1[col] , lower_whisker , upper_whisker)\n",
     "    return df1\n",
     "\n",
     "def treat_outliers_all(df1 , col_list):\n",
     "    for c in col_list:\n",
-    "        df1 = remove_outlier(df , c)\n",
+    "        df1 = remove_outlier(df1 , c)\n",
     "    return df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
        "dist_travel_km           1.000000  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "RandomForestRegressor()"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,14 +1741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.001   5.735   9.3455 ... 11.07   11.252  13.625 ]\n"
+      "[ 5.0815  6.589   8.96   ... 10.86   11.476  13.324 ]\n"
      ]
     }
    ],
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,14 +1769,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_8268\\3594083183.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15452\\3594083183.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  result_tabulation = result_tabulation.append(full_metrics, ignore_index = True)\n"
      ]
     },
@@ -1822,7 +1822,7 @@
        "0  Linear Regression  2.703957   0.753906"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,14 +1839,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_8268\\2086097427.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15452\\2086097427.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  result_tabulation = result_tabulation.append(full_metrics, ignore_index = True)\n"
      ]
     },
@@ -1886,8 +1886,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>2.364550</td>\n",
-       "      <td>0.811809</td>\n",
+       "      <td>2.364658</td>\n",
+       "      <td>0.811792</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1896,10 +1896,10 @@
       "text/plain": [
        "               Model      RMSE  R-Squared\n",
        "0  Linear Regression  2.703957   0.753906\n",
-       "1     Random Forest   2.364550   0.811809"
+       "1     Random Forest   2.364658   0.811792"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
