--- a/LP-3/ML/2-EmailSpamClassification/EmailClassification.ipynb
+++ b/LP-3/ML/2-EmailSpamClassification/EmailClassification.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
     }
    ],
    "source": [
-    "model = SVC(C = 1)   \n",
+    "model = SVC(C = 1)   # svm = SVC(kernel='linear', probability=True)\n",
     "model.fit(x_train, y_train)"
    ]
   },
