--- a/LP-3/ML/5-KMeans/KMeanClustering.ipynb
+++ b/LP-3/ML/5-KMeans/KMeanClustering.ipynb
@@ -2,19 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import datetime as dt\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
