Code format done

--- a/LP-3/ML/1-UberPricePrediction/UberPrice.ipynb
+++ b/LP-3/ML/1-UberPricePrediction/UberPrice.ipynb
@@ -1664,8 +1664,8 @@
    "outputs": [],
    "source": [
     "# Dividing the dataset into feature and target values \n",
-    "df_x = df[['pickup_longitude','pickup_latitude','dropoff_longitude','dropoff_latitude','passenger_count','hour','day','month','year','dayofweek','dist_travel_km']]\n",
-    "df_y = df['fare_amount']"
+    "X = df[['pickup_longitude','pickup_latitude','dropoff_longitude','dropoff_latitude','passenger_count','hour','day','month','year','dayofweek','dist_travel_km']]\n",
+    "y = df['fare_amount']"
    ]
   },
   {
@@ -1675,7 +1675,7 @@
    "outputs": [],
    "source": [
     "# Dividing the dataset into training and testing dataset\n",
-    "x_train, x_test, y_train, y_test = train_test_split(df_x, df_y, test_size=0.2, random_state=1)"
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
    ]
   },
   {
@@ -1748,7 +1748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.0815  6.589   8.96   ... 10.86   11.476  13.324 ]\n"
+      "[ 4.865   6.1245  9.41   ... 10.895  11.384  13.724 ]\n"
      ]
     }
    ],
@@ -1776,7 +1776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15452\\3594083183.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_17340\\3594083183.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  result_tabulation = result_tabulation.append(full_metrics, ignore_index = True)\n"
      ]
     },
@@ -1846,7 +1846,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15452\\2086097427.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_17340\\2086097427.py:6: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  result_tabulation = result_tabulation.append(full_metrics, ignore_index = True)\n"
      ]
     },
@@ -1886,8 +1886,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>2.364658</td>\n",
-       "      <td>0.811792</td>\n",
+       "      <td>2.363490</td>\n",
+       "      <td>0.811978</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1896,7 +1896,7 @@
       "text/plain": [
        "               Model      RMSE  R-Squared\n",
        "0  Linear Regression  2.703957   0.753906\n",
-       "1     Random Forest   2.364658   0.811792"
+       "1     Random Forest   2.363490   0.811978"
       ]
      },
      "execution_count": 33,
